--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
 	"repository": "github:seleb/web-rtc-mesh",
 	"scripts": {
 		"build": "node --experimental-modules ./build.mjs",
-		"start": "node --experimental-modules ./src/server/main.mjs"
+		"build:prod": "cross-env NODE_ENV=production npm run build",
+		"build:dev": "cross-env NODE_ENV=development npm run build",
+		"start": "node --experimental-modules ./src/server/main.mjs",
+		"start:prod": "cross-env NODE_ENV=production npm run start",
+		"start:dev": "cross-env NODE_ENV=development DEBUG=web-rtc-mesh:* npm run start"
 	},
 	"author": "Sean S. LeBlanc <sean.s.leblanc@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"debug": "^3.1.0",
 		"express": "^4.16.3",
 		"simple-peer": "^9.1.2",
 		"socket.io": "^2.1.1",
 		"socket.io-client": "^2.1.1"
 	},
 	"devDependencies": {
+		"cross-env": "^5.2.0",
 		"webpack": "^4.5.0"
 	}
 }
